# experiments_plansys_actions

./: CMakeLists.txt  README.md  package.xml
config/: actions_params.yaml  baseline_actions_params.yaml  experiments_controller_param.yaml  exploration_exploitation_actions_params.yaml  exploration_exploitation_experiments_controller_param.yaml  humans_scene_manager.yaml  waypoints.yaml
data_acquisition/EXPLORATION_EXPERIMENTS/: exploration.csv
data_acquisition/EXPLORATION_EXPERIMENTS/exploration/: exported_action_execution_data_collection.csv
data_acquisition/EXPLORATION_EXPERIMENTS/no_exploration/: no_exploration.csv  (+1 more)
data_acquisition/EXPLORATION_EXPLOITATION_OPTIC/: EXPLORATION_EXPLOITATION_OPTIC_0.db3  metadata.yaml
data_acquisition/EXPLORATION_EXPLOITATION_OPTIC_100_10_6/: EXPLORATION_EXPLOITATION_OPTIC_100_10_6_0.db3  metadata.yaml
data_acquisition/EXPLORATION_EXPLOITATION_OPTIC_LAST/: EXPLORATION_EXPLOITATION_OPTIC_LAST_0.db3  metadata.yaml
data_acquisition/LPG_BASELINE/: LPG_BASELINE_0.db3  metadata.yaml
data_acquisition/NO_EXPLORATION_OPTIC_50/: NO_EXPLORATION_OPTIC_50_0.db3  metadata.yaml
data_acquisition/OPTIC_50_2/: OPTIC_50_2_0.db3  metadata.yaml
data_acquisition/OPTIC_50_3/: OPTIC_50_3_0.db3  metadata.yaml
data_acquisition/OPTIC_BASELINE/: OPTIC_BASELINE_0.db3  metadata.yaml
data_acquisition/OPTIMAL_PLAN/: OPTIMAL_PLAN_0.db3  metadata.yaml
data_acquisition/POPF_BASELINE/: POPF_BASELINE_0.db3  metadata.yaml
data_acquisition/TAMER_BASELINE/: TAMER_BASELINE_0.db3
data_acquisition/TAMER_BASELINE_2/: TAMER_BASELINE_2_0.db3  metadata.yaml
data_acquisition/TAMER_LAST_BASELINE/: TAMER_LAST_BASELINE_0.db3  metadata.yaml
data_acquisition/long_time_experiments/: exported_action_execution_data_collection.csv  exported_plan_execution_data_collection.csv
data_acquisition/lpg_50/: lpg_50_0.db3  metadata.yaml
data_acquisition/optic_50/: metadata.yaml  optic_50_0.db3
data_acquisition/plans_executions_popf_50/: metadata.yaml  plans_executions_popf_50_0.db3
data_acquisition/plans_executions_tamer_100/: metadata.yaml  plans_executions_tamer_100_0.db3
data_acquisition/plans_executions_tamer_100_day/: metadata.yaml  plans_executions_tamer_100_day_0.db3
data_acquisition/plans_executions_tamer_100_early_timeout01/: metadata.yaml  plans_executions_tamer_100_early_timeout01_0.db3
data_acquisition/plans_executions_tamer_100_night/: plans_executions_tamer_100_night_0.db3
data_acquisition/plans_executions_tamer_50_early_timeout01/: metadata.yaml  plans_executions_tamer_50_early_timeout01_0.db3
data_acquisition/popf_50/: metadata.yaml  popf_50_0.db3
data_acquisition/tamer_50/: metadata.yaml  tamer_50_0.db3
data_acquisition/tamer_50_2/: metadata.yaml  tamer_50_2_0.db3
data_acquisition/test_100_exploration/: metadata.yaml  test_100_exploration_0.db3
data_acquisition/test_100_exploration2/: metadata.yaml  test_100_exploration2_0.db3
data_acquisition/test_bag/: metadata.yaml  test_bag_0.db3
experiments_plansys_actions/: dummy_exploration_exploitation_controller.py  fluents_generator.py  humans_scene_manager.py  task_plan_uncertainty.py
launch/: controller.launch.py  domain_problem.launch.py  experiments_actions.launch.py  exploration_exploitation_controller.launch.py  exploration_exploitation_experiments_actions.launch.py  humans_scene_manager.launch.py  loop_controller.launch.py
pddl/: clean_problem.pddl  domain.pddl  experiments_domain.pddl  experiments_domain_fluents.pddl  experiments_domain_fluents1.pddl  experiments_domain_fluents2.pddl  experiments_domain_type.pddl  experiments_problem.pddl  experiments_problem_fluents.pddl  experiments_problem_fluents2.pddl  experiments_problem_type.pddl  hospital_domain.pddl  hospital_problem.pddl  patrol.pddl  problem.pddl  test_domain.pddl  test_problem.pddl
pddl/tamer/: baseline.py  domain.pddl  neutral_problem.pddl  problem_2024_11_24_004555.pddl  test.py  test2.py  test3.py  test4.py  test5.py
script/: humans_scene_manager.py
src/: assist_person_node.cpp  attend_person_node.cpp  clean_action_node.cpp  domain_problem_node.cpp  experiments_controller_node.cpp  experiments_loop_controller_node.cpp  exploration_exploitation_controller_node.cpp  move_action_node.cpp  move_action_pure_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp
test/: CMakeLists.txt  task_plan_uncertainty_test.py  task_plan_uncertainty_test2.py
test/pddl/: problem.pddl
test_bag/: metadata.yaml  test_bag_0.db3
(+9 files in other folders)
