<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>experiments_plansys_actions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="samuele.sandrini@polito.it">kalman</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>plansys2_action_clients</depend>
  <depend>plansys2_actions_cost</depend>
  <depend>plansys2_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>audio_common_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
